--- a/package.json
+++ b/package.json
@@ -2,28 +2,36 @@
   "name": "@to-do-app-nx/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {
-
-  },
+  "scripts": {},
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.2.17",
-    "@angular/common": "^19.2.17",
+    "@angular/cdk": "19.0.0",
+    "@angular/common": "19.2.17",
     "@angular/compiler": "^19.2.17",
-    "@angular/core": "^19.2.17",
+    "@angular/core": "19.2.17",
     "@angular/forms": "^19.2.17",
     "@angular/platform-browser": "^19.2.17",
     "@angular/platform-browser-dynamic": "^19.2.17",
     "@angular/router": "^19.2.17",
     "@nestjs/common": "^11.0.0",
     "@nestjs/core": "^11.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@primeng/themes": "^19.1.4",
+    "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.6.0",
+    "class-validator": "^0.14.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "mysql2": "^3.16.0",
     "pg": "^8.16.3",
+    "primeng": "^19.1.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.18",
     "tslib": "^2.8.1",
     "typeorm": "^0.3.28",
     "zone.js": "^0.15.1"
@@ -55,7 +63,8 @@
     "@types/jest": "^29.5.12",
     "@types/node": "20.19.9",
     "@typescript-eslint/utils": "^8.40.0",
-    "angular-eslint": "^19.2.0",
+    "angular-eslint": "^20.3.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "jest": "^29.7.0",
@@ -64,11 +73,15 @@
     "jest-preset-angular": "~14.4.0",
     "jest-util": "^29.7.0",
     "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~19.2.0",
     "nx": "22.3.3",
+    "postcss": "^8.5.6",
+    "postcss-url": "~10.1.3",
     "prettier": "~3.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
+    "tw-animate-css": "^1.4.0",
     "typeorm-ts-node-commonjs": "^0.3.20",
     "typescript": "~5.8.0",
     "typescript-eslint": "^8.40.0",
