--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,16 +10,36 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@to-do-app-nx/models": ["libs/shared/models/src/index.ts"],
-      "@to-do-app-nx/data-access": ["libs/shared/data-access/src/index.ts"],
-      "@to-do-app-nx/ui": ["libs/shared/ui/src/index.ts"],
-      "@to-do-app-nx/database": ["libs/shared/database/src/index.ts"]
+      "@to-do-app-nx/models": [
+        "libs/shared/models/src/index.ts"
+      ],
+      "@to-do-app-nx/data-access": [
+        "libs/shared/data-access/src/index.ts"
+      ],
+      "@to-do-app-nx/ui": [
+        "libs/shared/ui/src/index.ts"
+      ],
+      "@to-do-app-nx/database": [
+        "libs/shared/database/src/index.ts"
+      ],
+      "@spartan-ng/helm/button": [
+        "libs/ui/button/src/index.ts"
+      ],
+      "@spartan-ng/helm/utils": [
+        "libs/ui/utils/src/index.ts"
+      ]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
